--- a/src/main/resources/templates/User/newUser.html
+++ b/src/main/resources/templates/User/newUser.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <form th:method="POST" th:action="@{/users}" th:object="${user}">
-    <label for="UserId">Enter UserId: </label>
-    <input type="text" th:field="*{userId}" id="UserId">
-    <br/>
+<!--    <label for="UserId">Enter UserId: </label>-->
+<!--    <input type="text" th:field="*{userId}" id="UserId">-->
+<!--    <br/>-->
     <label for="UserName">Enter UserName: </label>
     <input type="text" th:field="*{userName}" id="UserName">
     <div style = "color:red" th:if="${#fields.hasErrors('userName')}" th:errors = "*{userName}">UserName Errors</div>
@@ -30,13 +30,17 @@
     <input type="text" th:field="*{userRole}" id="userRole">
     <div style = "color:red" th:if="${#fields.hasErrors('userRole')}" th:errors = "*{userRole}">userRole Errors</div>
     <br/>
-    <label for="userAccessed1">Enter userAccessed1: </label>
-    <input type="text" th:field="*{userAccessed1}" id="userAccessed1">
-    <div style = "color:red" th:if="${#fields.hasErrors('userAccessed1')}" th:errors = "*{userAccessed1}">userAccessed1 Errors</div>
+    <label for="usersAccessed">Enter usersAccessed: </label>
+    <input type="text" th:field="*{usersAccessed}" id="usersAccessed">
+    <div style = "color:red" th:if="${#fields.hasErrors('usersAccessed')}" th:errors = "*{usersAccessed}">usersAccessed Errors</div>
     <br/>
-    <label for="userAccessed2">Enter userAccessed2: </label>
-    <input type="text" th:field="*{userAccessed2}" id="userAccessed2">
-    <div style = "color:red" th:if="${#fields.hasErrors('userAccessed2')}" th:errors = "*{userAccessed2}">userAccessed2 Errors</div>
+    <label for="password">Enter password: </label>
+    <input type="text" th:field="*{password}" id="password">
+    <div style = "color:red" th:if="${#fields.hasErrors('password')}" th:errors = "*{password}">password Errors</div>
+    <br/>
+    <label for="picture">Enter picture: </label>
+    <input type="text" th:field="*{picture}" id="picture">
+    <div style = "color:red" th:if="${#fields.hasErrors('picture')}" th:errors = "*{picture}">picture Errors</div>
     <br/>
     <input type="submit" value="Create!">
 </form>
