POST GET PATCH request

--- a/frontend/src/Component/Table/table.module.css
+++ b/frontend/src/Component/Table/table.module.css
@@ -31,3 +31,15 @@
     width: 300px;
     height: 10px;
 }
+
+.input{
+    background:transparent;
+}
+
+.link{
+    text-decoration: none;
+}
+
+.span{
+    margin-left: 20px;
+}
