remake all user methods

--- a/src/main/resources/templates/User/allUsers.html
+++ b/src/main/resources/templates/User/allUsers.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:each="user: ${allUsers}">
-    <a th:href="@{users/{id}(id=${user.getUserId()})}"
+    <a th:href="@{user/{id}(id=${user.getUserId()})}"
        th:text="${user.getUserId()} + ' ' + ${user.getUserName()}">user</a>
 </div>
 <br/>
