--- a/src/main/resources/templates/User/newUser.html
+++ b/src/main/resources/templates/User/newUser.html
@@ -6,7 +6,7 @@
     <title>New User</title>
 </head>
 <body>
-<form th:method="POST" th:action="@{/users}" th:object="${user}">
+<form th:method="POST" th:action="@{/users/new}" th:object="${user}">
 <!--    <label for="UserId">Enter UserId: </label>-->
 <!--    <input type="text" th:field="*{userId}" id="UserId">-->
 <!--    <br/>-->
