--- a/src/main/resources/templates/User/singleUser.html
+++ b/src/main/resources/templates/User/singleUser.html
@@ -1,89 +1,186 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org" xmlns="http://www.w3.org/1999/html">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"-->
+<!--      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"-->
+<!--integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"-->
+<!--crossorigin="anonymous"></script>-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+      integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+
 <head>
     <meta charset="UTF-8">
     <title>Пользователь</title>
 </head>
 <body>
-<
-<table class="table table-striped table-bordered table-hover">
-    <thead>
-    <div>Пользователь</div>
-    </thead>
-    <tbody>
-    <tr>
-        <th>Id пользователя</th>
-        <td>
-            <div th:text="${user.getUserId()}"></div>
-        </td>
-    </tr>
-    <tr>
-        <td>Имя пользователя</td>
-        <td>
-            <div th:text="${user.getUserName()}"></div>
-        </td>
-    </tr>
-    <tr>
-        <td>Компания</td>
-        <td>
-            <div th:text="${user.getUserCompany()}"></div>
-        </td>
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Навигация</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#" th:text="${user.getUserCompany()}">Company</a>
+        </div>
 
-    </tr>
-    <tr>
-        <td>Телефон пользователя</td>
-        <td>
-            <div th:text="${user.getUserPhoneNumber()}"></div>
-        </td>
-    </tr>
-    <tr>
-        <td>Профессия пользователя</td>
-        <td>
-            <div th:text="'userProfession: ' +${user.getUserProfession()}"></div>
-        </td>
-    </tr>
-    <tr>
-        <td>Роль пользователя</td>
-        <td>
-            <div th:text="${user.getUserRole()}"></div>
-        </td>
-    </tr>
-    <tr>
-        <td>Доступ к пользователям</td>
-        <td>
-            <div th:text="${user.getUsersAccessed()}"></div>
-        </td>
-    </tr>
-    <tr>
-        <td>Пароль</td>
-        <td>
-            <div th:text="${user.getPassword()}"></div>
-        </td>
-    </tr>
-    <tr>
-    <tr>
-        <td>Email пользователя</td>
-        <td>
-            <div th:text="${user.getEmail()}"></div>
-        </td>
-    </tr>
-    <tr>
-        <td>Аватар пользователя</td>
-        <td>
-            <div th:text="${user.getPicture()}"></div>
-        </td>
-    </tr>
-    </tbody>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a th:href="@{/users}"><i
+                        class="glyphicon glyphicon-home"></i></a></li>
+                <!--                <li><a href="#">Ссылка</a></li>-->
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Действие</a></li>
+                        <li><a href="#">Другое действие</a></li>
+                        <li><a href="#">Что-то еще</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Отдельная ссылка</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Еще одна отдельная ссылка</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <!--            <form class="navbar-form navbar-left" role="search">-->
+            <!--                <div class="form-group">-->
+            <!--                    <input type="text" class="form-control" placeholder="Поиск">-->
+            <!--                </div>-->
+            <!--                <button type="submit" class="btn btn-default">Отправить</button>-->
+            <!--            </form>-->
+            <form th:method="DELETE" th:action="@{/user/{id} (id = ${user.getUserId()})}">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a th:href="@{/user/{id}/edit (id = ${user.getUserId()})}"><i
+                                class="glyphicon glyphicon-pencil"></i></a>
+                    </li>
+                    <li>
+                        <button type="submit">
+                            <i class="glyphicon glyphicon-trash">
+                            </i>
+                        </button>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Действие</a></li>
+                            <li><a href="#">Другое действие</a></li>
+                            <li><a href="#">Что-то еще</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Отдельная ссылка</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </form>
+        </div>
+    </div>
+</nav>
 
-</table>
-<a th:href="@{/user/{id}/edit (id = ${user.getUserId()})}">Edit</a>
-<form th:method="DELETE" th:action="@{/user/{id} (id = ${user.getUserId()})}">
-    <input type="submit" value="Delete!">
-</form>
+<!--<div class="dropdown">-->
+<!--    <button class="btn btn-info dropdown-toggle" data-toggle="dropdown">Список <span class="caret"></span></button>-->
+<!--    <ul class="dropdown-menu">-->
+<!--        <li class="dropdown-header">Заголовок 1</li>-->
+<!--        <li><a href="#">CSS</a></li>-->
+<!--        <li class="disabled"><a href="#">HTML</a></li>-->
+<!--        <li><a href="#">jQuery</a></li>-->
+<!--        <li class="divider"></li>-->
+<!--        <li class="dropdown-header">Заголовок 2</li>-->
+<!--        <li><a href="#">Javascript</a></li>-->
+<!--    </ul>-->
+<!--</div>-->
+
+
+<br><br><br><br>
+<div class="container-sm">
+    <table class="table table-bordered table-hover">
+        <thead>
+        <th class="success" colspan=2>
+            <div th:text="'Пользователь: '+${user.getUserName()}"></div>
+        </th>
+        </thead>
+        <tbody class="table-group-divider">
+        <tr>
+            <td>Id пользователя</td>
+            <td>
+                <div th:text="${user.getUserId()}"></div>
+            </td>
+        </tr>
+        <tr>
+            <td>Имя пользователя</td>
+            <td>
+                <div th:text="${user.getUserName()}"></div>
+            </td>
+        </tr>
+        <tr>
+            <td>Компания</td>
+            <td>
+                <div th:text="${user.getUserCompany()}"></div>
+            </td>
+
+        </tr>
+        <tr>
+            <td>Телефон пользователя</td>
+            <td>
+                <div th:text="${user.getUserPhoneNumber()}"></div>
+            </td>
+        </tr>
+        <tr>
+            <td>Профессия пользователя</td>
+            <td>
+                <div th:text="${user.getUserProfession()}"></div>
+            </td>
+        </tr>
+        <tr>
+            <td>Роль пользователя</td>
+            <td>
+                <div th:text="${user.getUserRole()}"></div>
+            </td>
+        </tr>
+        <tr>
+            <td>Доступ к пользователям</td>
+            <td>
+                <div th:text="${user.getUsersAccessed()}"></div>
+            </td>
+        </tr>
+        <tr>
+            <td>Пароль</td>
+            <td>
+                <div th:text="${user.getPassword()}"></div>
+            </td>
+        </tr>
+        <tr>
+        <tr>
+            <td>Email пользователя</td>
+            <td>
+                <div th:text="${user.getEmail()}"></div>
+            </td>
+        </tr>
+        <tr>
+            <td>Аватар пользователя</td>
+            <td>
+                <div th:text="${user.getPicture()}"></div>
+            </td>
+        </tr>
+        </tbody>
+
+    </table>
+</div>
+<!--<form th:method="DELETE" th:action="@{/user/{id} (id = ${user.getUserId()})}">-->
+<!--    <input type="submit" value="Delete!">-->
+<!--</form>-->
+<!-- jQuery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
