--- a/src/main/resources/templates/User/singleUser.html
+++ b/src/main/resources/templates/User/singleUser.html
@@ -55,17 +55,10 @@
             <!--                </div>-->
             <!--                <button type="submit" class="btn btn-default">Отправить</button>-->
             <!--            </form>-->
-            <form th:method="DELETE" th:action="@{/user/{id} (id = ${user.getUserId()})}">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a th:href="@{/user/{id}/edit (id = ${user.getUserId()})}"><i
                                 class="glyphicon glyphicon-pencil"></i></a>
-                    </li>
-                    <li>
-                        <button type="submit">
-                            <i class="glyphicon glyphicon-trash">
-                            </i>
-                        </button>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -102,7 +95,7 @@
     <table class="table table-bordered table-hover">
         <thead>
         <th class="success" colspan=2>
-            <div th:text="'Пользователь: '+${user.getUserName()}"></div>
+            <div th:text="'Просмотр профиля пользователя: '+${user.getUserName()}"></div>
         </th>
         </thead>
         <tbody class="table-group-divider">
