--- a/src/main/resources/templates/User/editUser.html
+++ b/src/main/resources/templates/User/editUser.html
@@ -11,64 +11,68 @@
     <title>Update User</title>
 </head>
 <body>
-<form th:method="PATCH" th:action="@{/user/{id}/edit (id=${user.getUserId()})}" th:object="${user}">
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Навигация</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#" th:text="${user.getUserCompany()}">Company</a>
-            </div>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a th:href="@{/users}"><i
-                            class="glyphicon glyphicon-home"></i></a></li>
-                    <!--                <li><a href="#">Ссылка</a></li>-->
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Действие</a></li>
-                            <li><a href="#">Другое действие</a></li>
-                            <li><a href="#">Что-то еще</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Отдельная ссылка</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Еще одна отдельная ссылка</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <form th:method="DELETE" th:action="@{/user/{id} (id = ${user.getUserId()})}">
-                        <li>
-                            <button type="submit">
-                                <i class="glyphicon glyphicon-trash">
-                                </i>
-                            </button>
-                        </li>
-                    </form>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Действие</a></li>
-                            <li><a href="#">Другое действие</a></li>
-                            <li><a href="#">Что-то еще</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Отдельная ссылка</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <form th:method="DELETE" th:action="@{/user/{id} (id = ${user.getUserId()})}">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Навигация</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#" th:text="${user.getUserCompany()}">Company</a>
         </div>
-    </nav>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a th:href="@{/users}"><i
+                        class="glyphicon glyphicon-home"></i></a></li>
+                <!--                <li><a href="#">Ссылка</a></li>-->
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Действие</a></li>
+                        <li><a href="#">Другое действие</a></li>
+                        <li><a href="#">Что-то еще</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Отдельная ссылка</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Еще одна отдельная ссылка</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+
+                    <li>
+                        <button type="submit">
+                            <i class="glyphicon glyphicon-trash">
+                            </i>
+                        </button>
+                    </li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Действие</a></li>
+                        <li><a href="#">Другое действие</a></li>
+                        <li><a href="#">Что-то еще</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Отдельная ссылка</a></li>
+                    </ul>
+                </li>
+
+            </ul>
+            </form>
+        </div>
+    </div>
+</nav>
 
 
-    <br><br><br><br>
+<br><br><br><br>
+<form th:method="PATCH" th:action="@{/user/{id}/edit (id=${user.getUserId()})}" th:object="${user}">
     <div class="container-sm">
         <table class="table table-bordered table-hover">
             <thead>
@@ -183,21 +187,13 @@
 
         </table>
         <div>
-            <button class="btn btn-success button-md btn-block" type="submit" >
-                Сохранить изменения
-                <!--            <i class="glyphicon glyphicon-floppy-disk">-->
-                <!--            </i>-->
-            </button>
+            <input class="btn btn-success button-md btn-block" type="submit" value="Сохранить изменения">
         </div>
-
     </div>
-    <!--<form th:method="DELETE" th:action="@{/user/{id} (id = ${user.getUserId()})}">-->
-    <!--    <input type="submit" value="Delete!">-->
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-            crossorigin="anonymous"></script>
 </form>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 </body>
 </html>
