--- a/src/main/resources/templates/User/editUser.html
+++ b/src/main/resources/templates/User/editUser.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <form th:method="DELETE" th:action="@{/user/{id} (id = ${user.getUserId()})}">
+
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Навигация</span>
@@ -30,7 +30,6 @@
             <ul class="nav navbar-nav">
                 <li><a th:href="@{/users}"><i
                         class="glyphicon glyphicon-home"></i></a></li>
-                <!--                <li><a href="#">Ссылка</a></li>-->
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -45,13 +44,53 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-
-                    <li>
-                        <button type="submit">
-                            <i class="glyphicon glyphicon-trash">
-                            </i>
-                        </button>
-                    </li>
+                <!--                <li>-->
+                <!--                    <a href="#"><i class="glyphicon glyphicon-ok" data-toggle="modal" data-target="#myModalAccept"></i>-->
+                <!--                    </a>-->
+                <!--                    <div id="myModalAccept" class="modal fade" tabindex="-1">-->
+                <!--                        <div class="modal-dialog modal-sm">-->
+                <!--                            <div class="modal-content">-->
+                <!--                                <div class="modal-header">-->
+                <!--                                    <button class="close" data-dismiss="modal">х</button>-->
+                <!--                                    <h4 class="modal-title">Подтвердите изменения</h4>-->
+                <!--                                </div>-->
+                <!--                                <div class="modal-body">Сохранить изменения?</div>-->
+                <!--                                <form th:method="PATCH" th:action="@{/user/{id}/edit (id=${user.getUserId()})}" th:object="${user}">-->
+                <!--                                    <div class="modal-footer">-->
+                <!--                                        <button class="btn btn-danger" data-dismiss="modal">Отмена</button>-->
+                <!--                                        <button class="btn btn-success" type="submit">Сохранить</button>-->
+                <!--                                    </div>-->
+                <!--                                </form>-->
+                <!--                            </div>-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                </li>-->
+                <li>
+                    <a th:href="@{/user/{id}(id=${user.getUserId()})}"><i
+                            class="glyphicon glyphicon-arrow-left"></i></a>
+                </li>
+                <li>
+                    <a href="#"><i class="glyphicon glyphicon-trash" data-toggle="modal"
+                                   data-target="#myModalDelete"></i>
+                    </a>
+                    <div id="myModalDelete" class="modal fade" tabindex="-1">
+                        <div class="modal-dialog modal-sm">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button class="close" data-dismiss="modal">х</button>
+                                    <h4 class="modal-title">Удаление пользователя</h4>
+                                </div>
+                                <div class="modal-body">Вы уверены, что хотите удалить пользователя?</div>
+                                <form th:method="DELETE" th:action="@{/user/{id} (id = ${user.getUserId()})}">
+                                    <div class="modal-footer">
+                                        <button class="btn btn-success" data-dismiss="modal">Отмена</button>
+                                        <button class="btn btn-danger" type="submit">Удалить</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </li>
 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -65,7 +104,7 @@
                 </li>
 
             </ul>
-            </form>
+
         </div>
     </div>
 </nav>
@@ -187,7 +226,26 @@
 
         </table>
         <div>
-            <input class="btn btn-success button-md btn-block" type="submit" value="Сохранить изменения">
+            <input class="btn btn-success button-md btn-block" value="Сохранить изменения" data-toggle="modal" data-target="#myModalAccept">
+        <div id="myModalAccept" class="modal fade" tabindex="-1">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button class="close" data-dismiss="modal">х</button>
+                        <h4 class="modal-title">Подтвердите изменения</h4>
+                    </div>
+                    <div class="modal-body">Сохранить изменения?</div>
+                    <form th:method="PATCH" th:action="@{/user/{id}/edit (id=${user.getUserId()})}" th:object="${user}">
+                        <div class="modal-footer">
+                            <button class="btn btn-danger" data-dismiss="modal">Отмена</button>
+                            <button class="btn btn-success" type="submit">Сохранить</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
         </div>
     </div>
 </form>
