add bootstrap new user view

--- a/src/main/resources/templates/User/editUser.html
+++ b/src/main/resources/templates/User/editUser.html
@@ -70,6 +70,10 @@
                             class="glyphicon glyphicon-arrow-left"></i></a>
                 </li>
                 <li>
+                    <a href="/users/new"><i
+                            class="glyphicon glyphicon-plus"></i></a>
+                </li>
+                <li>
                     <a href="#"><i class="glyphicon glyphicon-trash" data-toggle="modal"
                                    data-target="#myModalDelete"></i>
                     </a>
