--- a/src/main/resources/templates/User/singleUser.html
+++ b/src/main/resources/templates/User/singleUser.html
@@ -57,6 +57,10 @@
             <!--            </form>-->
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="/users/new"><i
+                                class="glyphicon glyphicon-plus"></i></a>
+                    </li>
+                    <li>
                         <a th:href="@{/user/{id}/edit (id = ${user.getUserId()})}"><i
                                 class="glyphicon glyphicon-pencil"></i></a>
                     </li>
