--- a/src/main/resources/templates/Record/newRecord.html
+++ b/src/main/resources/templates/Record/newRecord.html
@@ -59,7 +59,7 @@
 
 
 <br>
-<form th:method="POST" th:action="@{/companies/new}" th:object="${company}">
+<form th:method="PATCH" th:action="@{/companies/new}" th:object="${company}">
     <div class="container-sm">
         <table class="table table-bordered table-hover">
             <thead>
